--- a/index.html
+++ b/index.html
@@ -4,7 +4,7 @@
 <head>
 	<meta charset="UTF-8">
 	<meta name="viewport" content="width=device-width, initial-scale=1.0">
-	<meta name="author" content="JVilalta">
+	<meta name="author" content="EasySun">
 	<title>HackDay</title>
 	<link rel="stylesheet" href="css/font-awesome.min.css">
 	<link rel="stylesheet" href="css/bootstrap.css">
@@ -15,13 +15,14 @@
 
 <body>
 	<header class="top-header">
+		<!-- HOLA -->
 		<div class="container">
 			<!--<div class="row header-row">-->
 			<div class="col-md-12">
-				<nav class="navbar navbar-default">
+				<nav class="navbar navbar-default" id="nav">
 
 					<a class="navbar-brand" href="#sec1">
-						<img src="img/logo.png" alt="" class="logo img-responsive">
+						<img src="img/logo.png" alt="" class="logo img-responsive" id="logotip">
 					</a>
 					<div class="container-fluid">
 
@@ -40,8 +41,8 @@
 
 							<ul class="nav navbar-nav navbar-left">
 								<li><a href="#sec1"><span class="glyphicon glyphicon-home" aria-hidden="true"></span> Home</a></li>
-								<li><a href="#sec2">SOBRE MI</a></li>
-								<li class="dropdown">
+								<li><a href="#sec2">APP</a></li>
+								<!--<li class="dropdown">
 									<a href="#sec3" class="dropdown-toggle" data-toggle="dropdown" role="button" aria-haspopup="true" aria-expanded="false">SERVEIS <span class="caret"></span></a>
 									<ul class="dropdown-menu">
 										<li><a href="#sec3">HOSTING</a></li>
@@ -51,11 +52,12 @@
 										<li><a href="#sec3">POSICIONAMENT EN BUSCADORS</a></li>
 										<li><a href="#sec3">SOCIAL MEDIA</a></li>
 									</ul>
-								</li>
-								<li><a href="#sec4">PORTFOLIO</a></li>
-								<li><a href="#sec5">OUR TEAM</a></li>
+								</li>-->
+								<!--<li><a href="#sec4">PORTFOLIO</a></li>-->
+								<li><a href="#sec5">EQUIP</a></li>
 								<li><a href="#sec6">CONTACTE</a></li>
 							</ul>
+							<!-->
 							<form class="navbar-form navbar-right" method="post">
 								<div class="form-group">
 									<input type="text" name="user" class="form-control" size="9" placeholder="Usuari">
@@ -63,7 +65,7 @@
 								</div>
 								<button type="submit" class="btn btn-default">LOGIN</button>
 							</form>
-
+							<!--/>
 						</div>
 						<!-- /.navbar-collapse -->
 					</div>
@@ -75,12 +77,12 @@
 	</header>
 
 	<!-- banner area starts here -->
-	<section class="banner text-center" id="sec1">
+	<section class="banner text-center">
 		<div class="container">
-			<div class="row">
-				<h3><em>Benvinguts al meu web!</em></h3>
+			<div class="row" id="divBanner">
+				<h3>Benvinguts a la revolució energètica!</h3>
 
-				<h1>JOAN VILALTA RIERA</h1>
+				<h1>EASY SUN</h1>
 
 				<img src="img/pin.png" alt="">
 				<br>
@@ -329,9 +331,9 @@
 
 			<a href="#sec1"><span class="glyphicon glyphicon-home" aria-hidden="true"></span> Home</a><br>
 			<a href="#sec2">SOBRE MI</a><br>
-			<a href="#sec3">SERVEIS</a><br>
-			<a href="#sec4">PORTFOLIO</a><br>
-			<a href="#sec5">OUR TEAM</a><br>
+			<!--<a href="#sec3">SERVEIS</a><br>-->
+			<!--<a href="#sec4">PORTFOLIO</a><br>-->
+			<a href="#sec5">EQUIP</a><br>
 			<a href="#sec6">CONTACTE</a><br>
 		</div>
 		<div class="col-xs-4 col-sm-4 col-md-4 col-lg-4 text-center">
