--- a/index.html
+++ b/index.html
@@ -40,7 +40,7 @@
 						<div class="container-fluid" id="bs-example-navbar-collapse-1">
 
 							<ul class="nav navbar-nav navbar-left">
-								<li><a href="#sec1"><span class="glyphicon glyphicon-home" aria-hidden="true"></span> Home</a></li>
+								<li><a href="#"><span class="glyphicon glyphicon-home" aria-hidden="true"></span> Home</a></li>
 								<li><a href="#sec2">APP</a></li>
 								<!--<li class="dropdown">
 									<a href="#sec3" class="dropdown-toggle" data-toggle="dropdown" role="button" aria-haspopup="true" aria-expanded="false">SERVEIS <span class="caret"></span></a>
