--- a/index.html
+++ b/index.html
@@ -21,7 +21,7 @@
 			<div class="col-md-12">
 				<nav class="navbar navbar-default" id="nav">
 
-					<a class="navbar-brand" href="#sec1">
+					<a class="navbar-brand" href="#">
 						<img src="img/logo.png" alt="" class="logo img-responsive" id="logotip">
 					</a>
 					<div class="container-fluid">
