--- a/index.html
+++ b/index.html
@@ -99,11 +99,11 @@
 			<div class="row">
 				<div class="col-md-8 col-md-offset-2 about-heading">
 					<h2>
-						SOBRE MI
+						EASY SUN
 					</h2>
 					<img src="img/daag.png" alt="">
 
-					<p>Lorem ipsum dolor sit amet, consectetur adipisicing elit, sed do eiusmod tempor incididunt ut labore et dolore magna aliqua. Ut enim ad minim veniam, <span>quis nostrud exercitation ullamco</span> laboris nisi ut aliquip ex ea commodo consequat duis aute irure dolor.</p>
+					<p>EasySun és un projecte que facilita les instal·lacions de plaques fotovoltaiques i ofereix un afegit als usuaris alhora de consultar el seu consum i calcular la potència energètica generada per les seves plaques.</p>
 				</div>
 
 				<div class="col-md-3 single-about col-xs-6 col-sm-4">
