--- a/index.html
+++ b/index.html
@@ -329,8 +329,8 @@
 		<div class="col-xs-4 col-sm-4 col-md-4 col-lg-4 text-center">
 			<h4>ENLLAÇOS</h4>
 
-			<a href="#sec1"><span class="glyphicon glyphicon-home" aria-hidden="true"></span> Home</a><br>
-			<a href="#sec2">SOBRE MI</a><br>
+			<a href="#"><span class="glyphicon glyphicon-home" aria-hidden="true"></span> Home</a><br>
+			<a href="#sec2">APP</a><br>
 			<!--<a href="#sec3">SERVEIS</a><br>-->
 			<!--<a href="#sec4">PORTFOLIO</a><br>-->
 			<a href="#sec5">EQUIP</a><br>
@@ -338,12 +338,12 @@
 		</div>
 		<div class="col-xs-4 col-sm-4 col-md-4 col-lg-4 text-center">
 			<h4>INFORMACIÓ DE CONTACTE</h4>
-			<p>C/ Arquitecte Pelai Martínex,1</p>
+			<!--<p>C/ Arquitecte Pelai Martínex,1</p>
 			<p>17600 Figueres, Girona</p>
 			<p>CATALUNYA</p>
 			<p><i class="fa fa-phone"></i> +972 50 79 08</p>
 			<p><i class="fa fa-fax"></i> +972 50 79 08</p>
-			<p><i class="fa fa-envelope"></i> b7005649@xtec.cat</p>
+			<p><i class="fa fa-envelope"></i> b7005649@xtec.cat</p>-->
 		</div>
 
 		<div class="col-xs-4 col-sm-4 col-md-4 col-lg-4 text-center">
