--- a/index.html
+++ b/index.html
@@ -274,16 +274,21 @@
 					<div class="col-xs-4 col-sm-4 col-md-4 col-lg-4 text-center">
 						<img class="img-circle img-responsive img-thumbnail" alt="persona1" width="200" height="250" src="img/cara1.jpg"></img>
 						<h6><b>Nom1 Cognom1</b></h6>
+						<h6>Nom1 Cognom1</h6>
 					</div>
 					<div class="col-xs-4 col-sm-4 col-md-4 col-lg-4 text-center">
 						<img class="img-circle img-responsive img-thumbnail" alt="persona2" width="200" height="250" src="img/cara2.jpg"></img>
-						<h6><b>Nom2 Cognom2</b></h6>
+						<h6><b>Joan Vilalta Riera</b></h6>
+						<<div class="container">
+						</div>
+
 					</div>
 					<div class="col-xs-4 col-sm-4 col-md-4 col-lg-4 text-center">
 						<img class="img-circle img-responsive img-thumbnail" alt="persona3" width="200" height="250" src="img/cara3.jpg"></img>
 						<h6><b>Nom3 Cognom3</b></h6>
 					</div>
 				</div>
+	<br>
                 <div class="container">
 					<div class="col-xs-4 col-sm-4 col-md-4 col-lg-4 text-center">
 						<img class="img-circle img-responsive img-thumbnail" alt="persona1" width="200" height="250" src="img/cara4.jpg"></img>
