--- a/index.html
+++ b/index.html
@@ -42,18 +42,17 @@
 							<ul class="nav navbar-nav navbar-left">
 								<li><a href="#"><span class="glyphicon glyphicon-home" aria-hidden="true"></span> Home</a></li>
 								<li><a href="#sec2">APP</a></li>
-								<!--<li class="dropdown">
-									<a href="#sec3" class="dropdown-toggle" data-toggle="dropdown" role="button" aria-haspopup="true" aria-expanded="false">SERVEIS <span class="caret"></span></a>
-									<ul class="dropdown-menu">
+								<li><a href="#sec3">FUNCIONAMENT</a>
+									<!--<ul class="dropdown-menu">
 										<li><a href="#sec3">HOSTING</a></li>
 										<li><a href="#sec3">DES WEBENVOLUPAMENT</a></li>
 										<li><a href="#sec3">E-COMMERCE</a></li>
 										<li role="separator" class="divider"></li>
 										<li><a href="#sec3">POSICIONAMENT EN BUSCADORS</a></li>
 										<li><a href="#sec3">SOCIAL MEDIA</a></li>
-									</ul>
-								</li>-->
-								<!--<li><a href="#sec4">PORTFOLIO</a></li>-->
+									</ul>-->
+								</li>
+								<li><a href="#sec4">MOSTRES</a></li>
 								<li><a href="#sec5">EQUIP</a></li>
 								<li><a href="#sec6">CONTACTE</a></li>
 							</ul>
@@ -103,26 +102,26 @@
 					</h2>
 					<img src="img/daag.png" alt="">
 
-					<p>EasySun és un projecte que facilita les instal·lacions de plaques fotovoltaiques i ofereix un afegit als usuaris alhora de consultar el seu consum i calcular la potència energètica generada per les seves plaques.</p>
+					<p>És una aplicació que facilita l’estudi de l’estalvi energètic obtingut amb una instal·lació fotovoltaica. Ofereix un servei a mida, diferent per a cada client.</p>
 				</div>
 
-				<div class="col-md-3 single-about col-xs-6 col-sm-4">
+				<div class="col-md-6 single-about col-xs-6 col-sm-4">
 					<div class="about-inside">
 						<i class="fa fa-lightbulb-o"></i>
-						<h3>Idea</h3>
-						<p>Poder tenir unes dades de referència basades en valors energètics i no de potència.</p>
+						<h3>Instal·lacions Personalitzades</h3>
+						<p>EasySun ofereix instal·lacions diferenciades per a cada client, totalment adaptades a les seves necessitats.</p>
 					</div>
 				</div>
 
-				<div class="col-md-3 single-about col-xs-6 col-sm-4">
+				<div class="col-md-6 single-about col-xs-6 col-sm-4">
 					<div class="about-inside">
 						<i class="fa fa-pencil"></i>
-						<h3>Title goes here</h3>
-						<p>onsectetur adipisicaing elit, sedo eiusmod tempor incidi et dolorerserss eerhfre mag.</p>
+						<h3>Reduir el percentatge d'energia consumida de la xarxa</h3>
+						<p>L'objectiu és reduir el màxim possible l'energia consumida de la xarxa, a través de l'energia generada de les plaques.</p>
 					</div>
 				</div>
 
-				<div class="col-md-3 single-about col-xs-6 col-sm-4">
+				<!--<div class="col-md-3 single-about col-xs-6 col-sm-4">
 					<div class="about-inside">
 						<i class="fa fa-cog"></i>
 						<h3>Title goes here</h3>
@@ -136,7 +135,7 @@
 						<h3>Title goes here</h3>
 						<p>onsectetur adipisicaing elit, sedo eiusmod tempor incidi et dolorerserss eerhfre mag.</p>
 					</div>
-				</div>
+				</div>-->
 			</div>
 		</div>
 	</section>
@@ -152,48 +151,48 @@
 					<h2>FUNCIONAMENT</h2>
 					<img src="img/daag.png" alt="">
 
-					<p>Text resum sobre els serveis que oferim ...
+					<p>Per a que tot aixó funcioni necessitem:
 						<br>
-						<br> ...tempor incididunt ut labore et dolore magna aliqua.</p>
+						<br> </p>
 				</div>
 				<div class="col-md-12 services">
 					<div class="col-md-2 single-service col-xs-6 col-sm-3">
 						<i class="fa fa-tachometer fa-4"></i>
-						<h3><b>Hosting</b></h3>
-						<p>Onsectetur adipisicing elit, sedo eiusmod tempor incidiet dolorerserss eerhfre mag.</p>
+						<h3><b>Consum</b></h3>
+						<p>El consum horari de tots els dies de l'any, a través d'Endesa.</p>
 					</div>
 
 					<div class="col-md-2 col-md-push-1 single-service col-xs-6 col-sm-3">
-						<i class="fa fa-html5 fa-4"></i>
-						<h3><b>Desenvolupament Web</b></h3>
-						<p>Onsectetur adipisicing elit, sedo eiusmod tempor incidiet dolorerserss eerhfre mag.</p>
+						<i class="fa fa-sun-o fa-4"></i>
+						<h3><b>Irradiació</b></h3>
+						<p> Obtenim la irradiació a través de la ubicació de cada client.</p>
 					</div>
 				</div>
 				<div class="col-md-12 services">
 					<div class="col-md-2 single-service col-xs-6 col-sm-3">
-						<i class="fa fa-shopping-cart fa-4"></i>
-						<h3><b>E-Commerce</b></h3>
-						<p>Onsectetur adipisicing elit, sedo eiusmod tempor incidiet dolorerserss eerhfre mag.</p>
+						<i class="fa fa-wrench fa-4"></i>
+						<h3><b>Instal·lació</b></h3>
+						<p>A partir del número de plaques, de la suprfície, de la potència de les plaques, de la poténcia contractada i la orientació de la façana, EasySun ofereix un servei d'instal·lacions totalment a mida.</p>
 					</div>
 
 					<div class="col-md-2 col-md-push-1 single-service col-xs-6 col-sm-3">
-						<i class="fa fa-photo fa-4"></i>
-						<h3><b>Disseny web</b></h3>
-						<p>Onsectetur adipisicing elit, sedo eiusmod tempor incidiet dolorerserss eerhfre mag.</p>
+						<i class="fa fa-eur fa-4"></i>
+						<h3><b>Estalvi</b></h3>
+						<p>Amb l’energia estalviada es pot traduir a estalvi econòmic a traves del preu de l’energia consumida</p>
 					</div>
 				</div>
 				<div class="col-md-12  services bottom-services">
 
 					<div class="col-md-2 single-service col-sm-3 col-xs-6">
-						<i class="fa fa-eye fa-4"></i>
-						<h3><b>Social Media</b></h3>
-						<p>Onsectetur adipisicing elit, sedo eiusmod tempor incidiet dolorerserss eerhfre mag.</p>
+						<i class="fa fa-line-chart fa-4"></i>
+						<h3><b>Resultats</b></h3>
+						<p>Gràfics, balanç energètic ( energia consumida / energia generada).</p>
 					</div>
 
 					<div class="col-md-2 col-md-push-1 single-service col-sm-3 col-xs-6">
-						<i class="fa fa-search fa-4"></i>
-						<h3><b>Posiconament web i mòbil</b></h3>
-						<p>Onsectetur adipisicing elit, sedo eiusmod tempor incidiet dolorerserss eerhfre mag.</p>
+						<i class="fa fa-info fa-4"></i>
+						<h3><b>Tarifa</b></h3>
+						<p>La Tarifa que s'adapta a tu.</p>
 					</div>
 				</div>
 			</div>
@@ -206,101 +205,81 @@
 	<section class="portfolio text-center" id="sec4">
 		<div class="row portfolio-row">
 			<div class="portfolio-heading">
-				<h2>MY WORK</h2>
-				<img src="img/daag.png" alt="">
-				<p>Lorem ipsum dolor sit amet, consectetur adipisicing elit, sed do eiusmod tempor incididunt
-					<br>
-					<br> ut labore et dolore magna aliqua.</p>
+				<h2>MOSTRES</h2>
 			</div>
 
-			<div class="col-md-3 single-portfolio col-sm-6">
+			<!--<div class="col-md-3 single-portfolio col-sm-6">
 				<a href="#" data-toggle="modal" data-target="#myModal"><img class="img-responsive" src="img/portfolio.jpg" alt=""></a>
-			</div>
-			<div class="modal fade" id="myModal" role="dialog">
-				<div class="modal-dialog" role="document">
-					<div class="modal-content">
-						<div class="modal-header">
-							<button type="button" class="close" data-dismiss="modal" aria-label="Close"><span aria-hidden="true">&times;</span></button>
-							<h4 class="modal-title">Modal title</h4>
-						</div>
-						<div class="modal-body">
-							<p>onsectetur adipisicing elit, sedo eiusmod tempor incidi et dolorerserss eerhfre mag.&hellip;</p>
-						</div>
-						<div class="modal-footer">
-							<button type="button" class="btn btn-default" data-dismiss="modal">Close</button>
-						</div>
-					</div>
-					<!-- /.modal-content -->
-				</div>
-				<!-- /.modal-dialog -->
-			</div>
-			<!-- /.modal -->
+			</div>-->
+			
 			<div class="col-md-3 single-portfolio col-sm-6">
-				<a href="#" data-toggle="modal" data-target="#myModal"><img class="img-responsive" src="img/portfolio2.jpg" alt=""></a>
+				<a href="img/graphic.png" alt="Graphic"><img class="img-responsive" src="img/graphic.png" alt="" width="200" height="250"></a>
+			</div>
+
+			<!--<div class="col-md-3 single-portfolio col-sm-6">
+				<a href="#" data-toggle="modal" data-target="#myModal2"><img class="img-responsive" src="img/portfolio3.jpg" alt=""></a>
 			</div>
 
 			<div class="col-md-3 single-portfolio col-sm-6">
-				<a href="#" data-toggle="modal" data-target="#myModal"><img class="img-responsive" src="img/portfolio3.jpg" alt=""></a>
+				<a href="#" data-toggle="modal" data-target="#myModal3"><img class="img-responsive" src="img/portfolio4.jpg" alt=""></a>
 			</div>
 
 			<div class="col-md-3 single-portfolio col-sm-6">
-				<a href="#" data-toggle="modal" data-target="#myModal"><img class="img-responsive" src="img/portfolio4.jpg" alt=""></a>
+				<a href="#" data-toggle="modal" data-target="#myModal4"><img class="img-responsive" src="img/portfolio5.jpg" alt=""></a>
 			</div>
 
 			<div class="col-md-3 single-portfolio col-sm-6">
-				<a href="#" data-toggle="modal" data-target="#myModal"><img class="img-responsive" src="img/portfolio5.jpg" alt=""></a>
+				<a href="#" data-toggle="modal" data-target="#myModal5"><img class="img-responsive" src="img/portfolio6.jpg" alt=""></a>
 			</div>
 
 			<div class="col-md-3 single-portfolio col-sm-6">
-				<a href="#" data-toggle="modal" data-target="#myModal"><img class="img-responsive" src="img/portfolio6.jpg" alt=""></a>
-			</div>
+				<a href="#" data-toggle="modal" data-target="#myModal6"><img class="img-responsive" src="img/portfolio7.jpg" alt=""></a>
+			</div>-->
 
-			<div class="col-md-3 single-portfolio col-sm-6">
-				<a href="#" data-toggle="modal" data-target="#myModal"><img class="img-responsive" src="img/portfolio7.jpg" alt=""></a>
-			</div>
-
-			<div class="col-md-3 single-portfolio col-sm-6">
-				<a href="#" data-toggle="modal" data-target="#myModal"><img class="img-responsive" src="img/portfolio8.jpg" alt=""></a>
-			</div>
 		</div>
 	</section>
 	<!-- end of portfolio section -->
 	<section class="contact text-center" id="sec5">
 		<div class="container">
 			<div class="row">
-				<h2>OUR TEAM</h2>
+				<h2>EQUIP</h2>
 				<p><em>Som un equip, som bons amics ...</em></p>
 				<div class="container">
 					<div class="col-xs-4 col-sm-4 col-md-4 col-lg-4 text-center">
 						<img class="img-circle img-responsive img-thumbnail" alt="persona1" width="200" height="250" src="img/cara1.jpg"></img>
-						<h6><b>Nom1 Cognom1</b></h6>
-						<h6>Nom1 Cognom1</h6>
+						<h6><b>Artur Domínguez</b></h6>
+						<h6>Enginyeria Informàtica</h6>
 					</div>
 					<div class="col-xs-4 col-sm-4 col-md-4 col-lg-4 text-center">
 						<img class="img-circle img-responsive img-thumbnail" alt="persona2" width="200" height="250" src="img/cara2.jpg"></img>
-						<h6><b>Joan Vilalta Riera</b></h6>
-						<<div class="container">
-						</div>
+						<h6><b>Joan Vilalta</b></h6>
+						<h6>CFPGS DAM i DAW<h6>
 
 					</div>
 					<div class="col-xs-4 col-sm-4 col-md-4 col-lg-4 text-center">
 						<img class="img-circle img-responsive img-thumbnail" alt="persona3" width="200" height="250" src="img/cara3.jpg"></img>
-						<h6><b>Nom3 Cognom3</b></h6>
+						<h6><b>Nil Basora</b></h6>
+						<h6>Enginyeria Electrònica<h6>
+							<h6>Enginyeria Elèctrica<h6>
 					</div>
 				</div>
 	<br>
                 <div class="container">
 					<div class="col-xs-4 col-sm-4 col-md-4 col-lg-4 text-center">
 						<img class="img-circle img-responsive img-thumbnail" alt="persona1" width="200" height="250" src="img/cara4.jpg"></img>
-						<h6><b>Nom1 Cognom1</b></h6>
+						<h6><b>Luis Carlos Bautista</b></h6>
+						<h6>Enginyeria Informàtica</h6>
 					</div>
 					<div class="col-xs-4 col-sm-4 col-md-4 col-lg-4 text-center">
 						<img class="img-circle img-responsive img-thumbnail" alt="persona2" width="200" height="250" src="img/cara5.jpg"></img>
-						<h6><b>Nom2 Cognom2</b></h6>
+						<h6><b>Marc Cañigueral</b></h6>
+						<h6>Enginyeria Electrònica<h6>
+							<h6>Enginyeria Elèctrica<h6>
 					</div>
 					<div class="col-xs-4 col-sm-4 col-md-4 col-lg-4 text-center">
 						<img class="img-circle img-responsive img-thumbnail" alt="persona3" width="200" height="250" src="img/cara6.jpg"></img>
-						<h6><b>Nom3 Cognom3</b></h6>
+						<h6><b>Jordi Coma</b></h6>
+						<h6>CFPGS DAM i DAW<h6>
 					</div>
 				</div>
 
