--- a/index.html
+++ b/index.html
@@ -211,9 +211,9 @@
 			<!--<div class="col-md-3 single-portfolio col-sm-6">
 				<a href="#" data-toggle="modal" data-target="#myModal"><img class="img-responsive" src="img/portfolio.jpg" alt=""></a>
 			</div>-->
-			
-			<div class="col-md-3 single-portfolio col-sm-6">
-				<a href="img/graphic.png" alt="Graphic"><img class="img-responsive" src="img/graphic.png" alt="" width="200" height="250"></a>
+			<!--col-md-3 single-portfolio col-sm-6-->
+			<div class=" mostres">
+				<a href="img/graphic.png" alt="Graphic" class=""><img class="img-responsive" src="img/graphic.png" alt="" width="200" height="250"></a>
 			</div>
 
 			<!--<div class="col-md-3 single-portfolio col-sm-6">
